# quest3-bowling-ball-tracking

./: .gitignore  BALL_TRACKING_AUTO_INIT_SPEC.md  BALL_TRACKING_README.md  BALL_TRACKING_SPEC.md  DOCS_MAP.md  FINDINGS_SO_FAR.md  HOLISTIC_PIPELINE_RESEARCH.md  QUEST_LAPTOP_PIPELINE_SPEC.md  QUEST_LAPTOP_PIPELINE_V3_SPEC.md  QUEST_LAPTOP_TRANSPORT_README.md  QUEST_TEAMMATE_SETUP_README.md  README.md  running_notes.md  start_live_pipeline.ps1
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
demo_video/: README.md  package-lock.json  package.json
docs/: DOCS_MAP.md  IMPLEMENTATION_PLAN.md  LANE_LOCK_MATH_AND_CONTRACT.md  LIVE_TRAJECTORY_RECONSTRUCTION.md  LIVE_VR_EXPERIENCE_SPEC.md  PIPELINE_STATE_MACHINE.md  PORTING_MAP.md  QUEST_LAPTOP_PIPELINE_V3_SPEC.md  QUEST_LAPTOP_TRANSPORT_README.md  QUEST_TEAMMATE_SETUP_README.md  STANDALONE_PRODUCT_GOAL.md  running_notes.md
lane detection lock and calibration/: README.md
laptop_pipeline/: README.md  annotate_manual_seeds.py  batch_track_manual_seeds.py  batch_track_recorded_runs.py  batch_track_yolo_seeds.py  classical_seed_core.py  evaluate_yolo_seed_detector.py  export_oracle_yolo_dataset.py  lane_geometry.py  live_sam2_camera_tracker.py  online_classical_seed.py  oracle_review_utils.py  oracle_seed_utils.py  path_config.py  quest_bowling_server.py  quest_bowling_udp_server.py  (+15 more)
quest_app/Plugins/Android/src/main/cpp/: CMakeLists.txt  StandaloneEncoderSurfaceBridge.cpp
unity_proof/Assets/Plugins/Android/StandaloneVideoEncoderPlugin/src/main/cpp/: CMakeLists.txt
(+158 files in other folders)
